--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -95,4 +95,28 @@
             }
         }
     }
+    .pagination-container{
+        padding: 50px 0;
+        position: relative;
+        .pagination{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            .page-item{
+                .page-dir{
+                    pointer-events: auto;
+                    font-size: 19px;
+                    color: $primary-font-color;
+                    &:hover{
+                        text-decoration: none;
+                    }
+                }
+                .active{
+                    font-weight: $black;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
 }
