--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -40,73 +40,86 @@
             border-bottom: 8px solid #959595;
         }
     }
-    .ajax-projects{
+    .ajax-parent-overlay{
         position: relative;
-        .row{
-            margin: 0 auto;
+        .projects-loader{
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
             width: 100%;
+            background: $body-bg;
+            z-index: 1;
+        }
+        .ajax-projects{
             position: relative;
-            .gallery-item{
+            .row{
+                margin: 0 auto;
+                width: 100%;
                 position: relative;
-                .gallery-card{
+                .gallery-item{
                     position: relative;
-                    overflow: hidden;
-                    margin: 0;
-                    height: 380px;
-                    .project-modal-btn{
-                        width: 100%;
-                        height: 100%;
-                        background: transparent;
-                        border: none;
-                        padding: 0;
-                        .gallery-item-img{
+                    .gallery-card{
+                        position: relative;
+                        overflow: hidden;
+                        margin: 0;
+                        height: 380px;
+                        .project-modal-btn{
                             width: 100%;
                             height: 100%;
-                            object-fit: cover;
+                            background: transparent;
+                            border: none;
+                            padding: 0;
+                            .gallery-item-img{
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                            }
+                        }
+                        .overlay{
+                            pointer-events: none;
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            text-align: center;
+                            background-color: rgba(255,255,255,0.7);
+                            .overlay-title{
+                                font-weight: $bold;
+                            }
+                            .overlay-text{
+                                font-weight: $semi-bold;
+                            }
                         }
                     }
-                    .overlay{
-                        pointer-events: none;
-                        position: absolute;
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        text-align: center;
-                        background-color: rgba(255,255,255,0.7);
-                        .overlay-title{
-                            font-weight: $bold;
-                        }
-                        .overlay-text{
-                            font-weight: $semi-bold;
-                        }
+                    &:hover{
+                        cursor: pointer;
                     }
-                }
-                &:hover{
-                    cursor: pointer;
                 }
             }
-        }
-        .pagination-container{
-            padding: 50px 0;
-            position: relative;
-            .pagination{
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                .page-item{
-                    .page-dir{
-                        pointer-events: auto;
-                        font-size: 19px;
-                        color: $primary-font-color;
-                        &:hover{
-                            text-decoration: none;
+            .pagination-container{
+                padding: 50px 0;
+                position: relative;
+                .pagination{
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    .page-item{
+                        .page-dir{
+                            pointer-events: auto;
+                            font-size: 19px;
+                            color: $primary-font-color;
+                            &:hover{
+                                text-decoration: none;
+                            }
                         }
-                    }
-                    .active{
-                        font-weight: $black;
+                        .active{
+                            font-weight: $black;
+                        }
                     }
                 }
             }
