--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -20,8 +20,8 @@
         top: 0;
         left: 0;
         overflow: hidden;
-        background-color: black;
-        opacity: 0.3;
+        //background-color: black;
+        opacity: 1;
     }
     #over{
         position: absolute;
