--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -47,7 +47,7 @@
     .ajax-spinner{
         z-index: 99998;
         display: none;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         margin-top: -15px;
@@ -115,6 +115,12 @@
                             background: transparent;
                             border: none;
                             padding: 0;
+                            .multiple-images{
+                                position: absolute;
+                                top: 5%;
+                                right: 5%;
+                                width: 40px;
+                            }
                             .gallery-item-img{
                                 width: 100%;
                                 height: 100%;
